[gd_scene load_steps=5 format=3 uid="uid://dfdg6f38ltevs"]

[ext_resource type="Texture2D" uid="uid://c5ds05g8fvchs" path="res://assets/images/ui/bonus_stage.png" id="1_8n2w5"]
[ext_resource type="Script" path="res://scenes/bonus/bonus_intro.gd" id="1_rwutp"]
[ext_resource type="Theme" uid="uid://b6spl8q4o8g5t" path="res://assets/comic.tres" id="2_an8h0"]
[ext_resource type="AudioStream" uid="uid://724oebl6vrdu" path="res://assets/sfx/accept.wav" id="5_v40q8"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rwutp")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 256.0
offset_bottom = 240.0
color = Color(0.324219, 0, 0.75, 1)

[node name="ColorRect2" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_right = 256.0
offset_bottom = 240.0
color = Color(0, 0.238281, 0.996094, 1)

[node name="ColorRect3" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_right = 256.0
offset_bottom = 240.0
color = Color(0, 0.355469, 0.992188, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
offset_left = 67.0
offset_top = 120.0
offset_right = 189.0
offset_bottom = 146.0
theme_override_constants/separation = 10

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="VBoxContainer/CenterContainer"]
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="VBoxContainer/CenterContainer/Control"]
position = Vector2(0, -8)
texture = ExtResource("1_8n2w5")
vframes = 3

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_an8h0")
theme_override_font_sizes/font_size = 16
text = "COLLECT THE STAR!"
horizontal_alignment = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
bus = &"Music"

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[node name="Skip" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_v40q8")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
